--- a/db/persons.yaml
+++ b/db/persons.yaml
@@ -68,6 +68,15 @@ persons:
     - org: governo-finlandia
       role: leader
       from: 2024
+  andre-oscar-wallenberg:
+    born: 1816
+    died: 1886
+    nationality: SWE
+    family: wallenberg
+    affiliations:
+    - org: seb
+      role: founder
+      from: 1856
   angela-merkel:
     born: 1954
     nationality: DEU
@@ -127,6 +136,36 @@ persons:
     born: 1894
     died: 1976
     nationality: USA
+  bernhard-lippe-biesterfeld:
+    born: 1911
+    died: 2004
+    nationality: NLD
+    affiliations:
+    - org: bilderberg
+      role: founder
+      from: 1954
+      to: 1976
+      note: Chairman fino scandalo Lockheed
+    - org: wwf
+      role: founder
+      from: 1961
+      to: 1976
+      note: Primo presidente
+    - org: ig-farben
+      role: executive
+      from: 1935
+      to: 1937
+      note: Parigi
+    - org: governo-olanda
+      role: military
+      from: 1940
+      to: 1945
+      note: Comandante Forze Interne Olandesi
+    - org: lockheed
+      role: advisor
+      from: 1970
+      to: 1976
+      note: Scandalo tangenti $1M+
   bettino-craxi:
     born: 1934
     died: 2000
@@ -855,6 +894,22 @@ persons:
       role: leader
       from: 2017
       to: 2023
+  jacob-wallenberg:
+    born: 1956
+    nationality: SWE
+    family: wallenberg
+    affiliations:
+    - org: bilderberg
+      role: steering
+      from: 1990
+      note: 17+ partecipazioni
+    - org: trilateral-commission
+      role: member
+  jacob-wallenberg-1892:
+    born: 1892
+    died: 1980
+    nationality: SWE
+    family: wallenberg
   jacques-delors:
     born: 1925
     died: 2023
@@ -1119,6 +1174,10 @@ persons:
       role: chairman
       from: 2021
       note: Board Chair
+  jozef-retinger:
+    born: 1888
+    died: 1960
+    nationality: POL
   jp-morgan:
     born: 1837
     died: 1913
@@ -1128,6 +1187,10 @@ persons:
     - org: jpmorgan
       role: founder
       from: 1871
+  juliana-olanda:
+    born: 1909
+    died: 2004
+    nationality: NLD
   justin-trudeau:
     born: 1971
     nationality: CAN
@@ -1163,6 +1226,11 @@ persons:
     - org: wef
       role: chairman
       from: 1971
+  knut-wallenberg:
+    born: 1853
+    died: 1938
+    nationality: SWE
+    family: wallenberg
   larry-ellison:
     born: 1944
     nationality: USA
@@ -1299,6 +1367,26 @@ persons:
       role: executive
       from: 2022
       to: 2024
+  marcus-wallenberg:
+    born: 1956
+    nationality: SWE
+    family: wallenberg
+  marcus-wallenberg-jr:
+    born: 1899
+    died: 1982
+    nationality: SWE
+    family: wallenberg
+    affiliations:
+    - org: bilderberg
+      role: steering
+      from: 1954
+      to: 1981
+      note: 22 partecipazioni
+  marcus-wallenberg-sr:
+    born: 1864
+    died: 1943
+    nationality: SWE
+    family: wallenberg
   margaret-chan:
     born: 1947
     nationality: CHN
@@ -1668,6 +1756,15 @@ persons:
     - org: founders-fund
       role: partner
       from: 2005
+  peter-wallenberg-jr:
+    born: 1959
+    nationality: SWE
+    family: wallenberg
+  peter-wallenberg-sr:
+    born: 1926
+    died: 2015
+    nationality: SWE
+    family: wallenberg
   philip-edinburgh:
     born: 1921
     died: 2021
@@ -1678,6 +1775,11 @@ persons:
       from: 1961
       to: 2021
       note: Co-fondatore, President UK 1961-82, International President 1981-96
+  raoul-wallenberg:
+    born: 1912
+    died: 1947
+    nationality: SWE
+    family: wallenberg
   ray-dalio:
     born: 1949
     nationality: USA
