--- a/db/organizations.yaml
+++ b/db/organizations.yaml
@@ -1943,9 +1943,11 @@ organizations:
     founded: 1900
     headquarters: Stockholm, Sweden
     status: active
+    aum: 6.1B SEK
     stakeholders:
     - person: marcus-wallenberg-jr
       role: board
+      note: Membro del board
   norges-bank-gpfg:
     type: swf
     founded: 1990
