--- a/db/persons.yaml
+++ b/db/persons.yaml
@@ -1429,6 +1429,7 @@ persons:
       to: 1967
     - org: nobel-foundation
       role: board
+      note: Membro del board
   marcus-wallenberg-sr:
     born: 1864
     died: 1943
